--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "babelify": "-t [ babelify --presets [ es2015 ] --plugins [ syntax-async-functions transform-regenerator ] ]"
   },
   "scripts": {
-    "lint": "eslint test gen",
+    "lint": "eslint .",
     "test": "babel-node ./node_modules/.bin/tape test/**/test_*.js",
     "build-test-js": "browserify $npm_package_config_babelify test/js-source/index.js > ./output/index.pack.js",
     "build-objc-polyfill": "browserify $npm_package_config_babelify runtime/objc/js/polyfill.js > runtime/objc/js/polyfill.pack.js",
