--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "gen-objc-test": "babel-node -- gen/index.js -q ./runtime/objc/templates ./output/objc test/js-source/*.js",
     "build-android-polyfill": "mkdirp runtime/android/manticore/src/main/res/raw/ && browserify $npm_package_config_babelify runtime/android/js/polyfill.js > runtime/android/manticore/src/main/res/raw/polyfill_pack.js",
     "gen-android-test": "babel-node -- gen/index.js -q ./runtime/android/templates ./runtime/android/manticore/src/test/java/com/paypal/manticore/ test/js-source/*.js",
+    "gen-win-test": "babel-node -- gen/index.js -q ./runtime/win/templates/jint ./runtime/win/generated/jint test/js-source/*.js && babel-node -- gen/index.js -q ./runtime/win/templates/clearscript ./runtime/win/generated/ClearScript test/js-source/*.js",
+    "build-win-polyfill": "browserify $npm_package_config_babelify runtime/win/js/polyfill.clearscript.js > runtime/win/generated/polyfill.clearscript.pack.js && browserify $npm_package_config_babelify runtime/win/js/polyfill.jint.js > runtime/win/generated/polyfill.jint.pack.js",
     "build": "babel gen/index --out-dir build/gen && babel gen/lib --out-dir build/gen/lib"
   },
   "repository": {
