--- a/runtime/win/Manticore.Win81/Manticore.Win81.csproj
+++ b/runtime/win/Manticore.Win81/Manticore.Win81.csproj
@@ -114,12 +114,17 @@
     <Compile Include="..\Manticore.Desktop\ManticoreException.cs">
       <Link>ManticoreException.cs</Link>
     </Compile>
+    <Compile Include="ManticoreEngine.cs" />
     <Compile Include="DefaultConverter.cs" />
     <Compile Include="IJsTypeConverter.cs" />
     <Compile Include="JsBackedObject.cs" />
-    <Compile Include="ManticoreEngine.cs" />
     <Compile Include="NativeServices.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="..\generated\polyfill.jint.pack.js">
+      <Link>polyfill.jint.pack.js</Link>
+    </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup Condition=" '$(VisualStudioVersion)' == '' or '$(VisualStudioVersion)' &lt; '12.0' ">
     <VisualStudioVersion>12.0</VisualStudioVersion>
