--- a/.travis.yml
+++ b/.travis.yml
@@ -8,5 +8,5 @@ osx_image: xcode7.3
 
 podfile: runtime/objc/Podfile
 
-xcode_project: runtime/objc/Manticore.xcworkspace
-xcode_scheme: ManticoreContainer-iOS
+script:
+  - xctool test -workspace Manticore.xcworkspace -scheme ManticoreContainer-iOS -sdk iphonesimulator ONLY_ACTIVE_ARCH=NO
