Split TravisCI script into its own file in prep for multiple envs

--- a/.travis.yml
+++ b/.travis.yml
@@ -13,8 +13,4 @@ before_install:
   - npm install -g npm@3
 
 script:
-  - npm install
-  - npm run build-test-js
-  - npm run build-objc-polyfill
-  - npm run gen-objc-test
-  - xctool test -workspace Manticore.xcworkspace -scheme ManticoreContainer-iOS -sdk iphonesimulator ONLY_ACTIVE_ARCH=NO
+  - ./ci/travis.sh
