--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ podfile: runtime/objc/Podfile
 
 before_install:
   - brew update
-  - brew install nodejs
+  - brew install homebrew/versions/node4-lts
   - npm install -g npm@3
 
 script:
