--- a/.travis.yml
+++ b/.travis.yml
@@ -15,5 +15,7 @@ matrix:
 
 podfile: runtime/objc/Podfile
 
+before_install: if [[ `npm -v` != 3* ]]; then npm i -g npm@3; fi
+
 script:
   - ./ci/travis.sh
