--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
   "license": "Apache-2.0",
   "dependencies": {
     "acorn-es7-plugin": "^1.0.12",
+    "ansidiff": "^1.0.0",
     "babel-polyfill": "^6.7.4",
     "babel-regenerator-runtime": "^6.5.0",
     "bluebird": "^3.3.4",
