--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,12 @@ matrix:
       language: objective-c
       env: BUILD_ITEM=osx
       osx_image: xcode7.3
+    - language: android
+      env: BUILD_ITEM=android
+      android:
+        components:
+          - platform-tools
+          - tools
 
 podfile: runtime/objc/Podfile
 
