--- a/package.json
+++ b/package.json
@@ -5,20 +5,20 @@
   "main": "build/index.js",
   "bin": "./build/gen/index.js",
   "config": {
-    "babelify": "-t [ babelify --presets [ es2015 ] --plugins [ syntax-async-functions transform-regenerator ] ]",
     "win": "runtime/win/generated"
   },
   "scripts": {
     "lint": "eslint .",
+    "precommit-lint": "eslint . || :",
     "test": "babel-node ./node_modules/.bin/tape test/**/test_*.js",
     "testSome": "babel-node ./node_modules/.bin/tape",
-    "build-test-js": "mkdirp output && browserify $npm_package_config_babelify test/js-source/index.js > ./output/index.pack.js",
-    "build-objc-polyfill": "browserify $npm_package_config_babelify runtime/objc/js/polyfill.js > runtime/objc/js/polyfill.pack.js",
+    "build-test-js": "babel-node ./mantify.js ./output/index.pack.js test/js-source/index.js",
+    "build-objc-polyfill": "babel-node ./mantify.js runtime/objc/js/polyfill.pack.js runtime/objc/js/polyfill.js",
     "gen-objc-test": "mkdirp output/objc && babel-node -- gen/index.js -q ./runtime/objc/templates ./output/objc test/js-source/*.js",
-    "build-android-polyfill": "mkdirp runtime/android/manticore/src/main/res/raw/ && browserify $npm_package_config_babelify runtime/android/js/polyfill.js > runtime/android/manticore/src/main/res/raw/polyfill_pack.js",
+    "build-android-polyfill": "babel-node ./mantify.js runtime/android/manticore/src/main/res/raw/polyfill_pack.js runtime/android/js/polyfill.js",
     "gen-android-test": "babel-node -- gen/index.js -q ./runtime/android/templates ./runtime/android/manticore/src/test/java/com/paypal/manticore/ test/js-source/*.js",
+    "build-win-polyfill": "babel-node ./mantify.js $npm_package_config_win/polyfill.clearscript.pack.js runtime/win/js/polyfill.clearscript.js && babel-node ./mantify.js $npm_package_config_win/polyfill.jint.pack.js runtime/win/js/polyfill.jint.js",
     "gen-win-test": "mkdirp $npm_package_config_win/jint $npm_package_config_win/ClearScript && babel-node -- gen/index.js -q ./runtime/win/templates/jint $npm_package_config_win/jint test/js-source/*.js && babel-node -- gen/index.js -q ./runtime/win/templates/clearscript $npm_package_config_win/ClearScript test/js-source/*.js",
-    "build-win-polyfill": "browserify $npm_package_config_babelify runtime/win/js/polyfill.clearscript.js > $npm_package_config_win/polyfill.clearscript.pack.js && browserify $npm_package_config_babelify runtime/win/js/polyfill.jint.js > $npm_package_config_win/polyfill.jint.pack.js",
     "build": "babel index.js --out-dir build && babel gen --out-dir build/gen",
     "dev": "git submodule update --init --recursive && npm run build-test-js && npm run build-objc-polyfill && npm run build-android-polyfill && npm run build-win-polyfill && npm run gen-objc-test && npm run gen-android-test && npm run gen-win-test"
   },
@@ -61,6 +61,11 @@
     "eslint-config-airbnb": "^6.2.0",
     "eslint-plugin-react": "^4.2.3",
     "mkdirp": "^0.5.1",
-    "tape": "^4.5.1"
-  }
+    "pre-commit": "^1.1.2",
+    "tape": "^4.5.1",
+    "uglifyify": "^3.0.1"
+  },
+  "pre-commit": [
+    "precommit-lint"
+  ]
 }
