Try and fix Android build

--- a/.travis.yml
+++ b/.travis.yml
@@ -13,6 +13,8 @@ matrix:
       android:
         components:
           - platform-tools
+          - tools
+          - platform-tools
           - build-tools-23.0.2
           - android-23
 
