--- a/.travis.yml
+++ b/.travis.yml
@@ -1,15 +1,20 @@
 matrix:
   include:
     - language: node_js
+      before_install: if [[ `npm -v` != 3* ]]; then npm i -g npm@3; fi
       env: BUILD_ITEM=node
       node_js:
         - "4"
     - os: osx
       language: objective-c
-      env: BUILD_ITEM=mac
+      env:
+        - BUILD_ITEM=mac
+        - TRAVIS_NODE_VERSION="4"
       osx_image: xcode7.3
     - language: android
-      env: BUILD_ITEM=android
+      env:
+        - BUILD_ITEM=android
+        - TRAVIS_NODE_VERSION="4"
       android:
         components:
           - platform-tools
@@ -19,8 +24,6 @@ matrix:
           - android-23
 
 podfile: runtime/objc/Podfile
-
-before_install: if [[ `npm -v` != 3* ]]; then npm i -g npm@3; fi
 
 script:
   - ./ci/travis.sh
