--- a/.travis.yml
+++ b/.travis.yml
@@ -3,14 +3,15 @@ matrix:
     - language: node_js
       before_install: if [[ `npm -v` != 3* ]]; then npm i -g npm@3; fi
       env: BUILD_ITEM=node
-      node_js:
-        - "4"
+      node_js: "4.4"
     - os: osx
       language: objective-c
       env: BUILD_ITEM=mac
       osx_image: xcode7.3
+      node_js: "4.4"
     - language: android
       env: BUILD_ITEM=android
+      node_js: "4.4"
       android:
         components:
           - platform-tools
