Working android tests, minor fixes to objc

--- a/package.json
+++ b/package.json
@@ -12,15 +12,15 @@
     "precommit-lint": "eslint .; true",
     "test": "babel-node ./node_modules/.bin/tape test/**/test_*.js",
     "testSome": "babel-node ./node_modules/.bin/tape",
-    "build-test-js": "babel-node ./mantify.js ./output/index.pack.js test/js-source/index.js",
-    "build-objc-polyfill": "babel-node ./mantify.js runtime/objc/js/polyfill.pack.js runtime/objc/js/polyfill.js",
-    "gen-objc-test": "mkdirp output/objc && babel-node -- gen/index.js -q ./runtime/objc/templates ./output/objc test/js-source/*.js",
-    "build-android-polyfill": "babel-node ./mantify.js runtime/android/manticore/src/main/res/raw/polyfill_pack.js runtime/android/js/polyfill.js",
-    "gen-android-test": "babel-node -- gen/index.js -q ./runtime/android/templates ./runtime/android/manticore/src/test/java/com/paypal/manticore/ test/js-source/*.js",
-    "build-win-polyfill": "babel-node ./mantify.js $npm_package_config_win/polyfill.clearscript.pack.js runtime/win/js/polyfill.clearscript.js && babel-node ./mantify.js $npm_package_config_win/polyfill.jint.pack.js runtime/win/js/polyfill.jint.js",
-    "gen-win-test": "mkdirp $npm_package_config_win/jint $npm_package_config_win/ClearScript && babel-node -- gen/index.js -q ./runtime/win/templates/jint $npm_package_config_win/jint test/js-source/*.js && babel-node -- gen/index.js -q ./runtime/win/templates/clearscript $npm_package_config_win/ClearScript test/js-source/*.js",
+    "build-testjs": "babel-node ./mantify.js ./output/index.pack.js test/js-source/index.js",
+    "objc-polyfill": "babel-node ./mantify.js runtime/objc/js/polyfill.pack.js runtime/objc/js/polyfill.js",
+    "objc-testjs": "mkdirp output/objc && babel-node -- gen/index.js -q ./runtime/objc/templates ./output/objc test/js-source/*.js",
+    "android-polyfill": "babel-node ./mantify.js runtime/android/manticore/src/main/res/raw/polyfill_pack.js runtime/android/js/polyfill.js",
+    "android-testjs": "babel-node -- gen/index.js -q ./runtime/android/templates ./runtime/android/manticore/src/test/java/com/paypal/manticore/ test/js-source/*.js",
+    "win-polyfill": "babel-node ./mantify.js $npm_package_config_win/polyfill.clearscript.pack.js runtime/win/js/polyfill.clearscript.js && babel-node ./mantify.js $npm_package_config_win/polyfill.jint.pack.js runtime/win/js/polyfill.jint.js",
+    "win-testjs": "mkdirp $npm_package_config_win/jint $npm_package_config_win/ClearScript && babel-node -- gen/index.js -q ./runtime/win/templates/jint $npm_package_config_win/jint test/js-source/*.js && babel-node -- gen/index.js -q ./runtime/win/templates/clearscript $npm_package_config_win/ClearScript test/js-source/*.js",
     "build": "babel index.js --out-dir build && babel gen --out-dir build/gen",
-    "dev": "git submodule update --init --recursive && npm run build-test-js && npm run build-objc-polyfill && npm run build-android-polyfill && npm run build-win-polyfill && npm run gen-objc-test && npm run gen-android-test && npm run gen-win-test"
+    "dev": "git submodule update --init --recursive && npm run build-testjs && npm run objc-polyfill && npm run android-polyfill && npm run win-polyfill && npm run objc-testjs && npm run android-testjs && npm run win-testjs"
   },
   "repository": {
     "type": "git",
