--- a/runtime/android/manticore/build.gradle
+++ b/runtime/android/manticore/build.gradle
@@ -46,7 +46,7 @@ dependencies {
     compile 'com.eclipsesource.j2v8:j2v8:3.1.6@aar'
     testCompile fileTree(dir: 'testLibs', include: ['*.jar'])
 
-    compile 'com.squareup.okhttp:okhttp:2.3.0'
+    compile 'com.squareup.okhttp3:okhttp:3.2.0'
     testCompile 'junit:junit:4.12'
     testCompile 'org.mockito:mockito-core:2.0.5-beta'
     testCompile('org.powermock:powermock-api-mockito:1.6.2') {
