--- a/runtime/win/Manticore.WP81.Test/packages.config
+++ b/runtime/win/Manticore.WP81.Test/packages.config
@@ -6,4 +6,5 @@
   <package id="xunit.core" version="2.1.0" targetFramework="wpa81" />
   <package id="xunit.extensibility.core" version="2.1.0" targetFramework="wpa81" />
   <package id="xunit.extensibility.execution" version="2.1.0" targetFramework="wpa81" />
+  <package id="xunit.runner.visualstudio" version="2.1.0" targetFramework="wpa81" />
 </packages>
