--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,13 +1,24 @@
+version: 1.0.{build}
+init:
+- ps: Install-Product node $env:nodejs_version
 environment:
-  nodejs_version: "4.4"
+  nodejs_version: 4.4
+  AppxPackageSigningEnabled: false
+before_build:
+- cmd: >-
+    git submodule update --init --recursive
 
-install:
-  - ps: Install-Product node $env:nodejs_version
-  - npm install -g npm@3
-  - npm install
-  - git submodule update --init --recursive
-  - nuget restore runtime/win/Manticore.sln
-  
+    npm install -g npm@3
+
+    npm install
+
+    npm run build-testjs
+
+    npm run win-polyfill
+
+    npm run win-testjs
+
+    nuget restore runtime\win\Manticore.sln
 build:
   project: runtime/win/Manticore.sln
-  
+  verbosity: minimal
