--- a/runtime/win/Manticore.Net4/Manticore.Net4.csproj
+++ b/runtime/win/Manticore.Net4/Manticore.Net4.csproj
@@ -46,6 +46,9 @@
     <Compile Include="..\Manticore.Desktop\ManticoreException.cs">
       <Link>ManticoreException.cs</Link>
     </Compile>
+    <Compile Include="..\Manticore.Desktop\ScriptEventArgs.cs">
+      <Link>ScriptEventArgs.cs</Link>
+    </Compile>
     <Compile Include="..\Manticore.Win81\DefaultConverter.cs">
       <Link>DefaultConverter.cs</Link>
     </Compile>
