--- a/runtime/win/Manticore.Win81/Manticore.Win81.csproj
+++ b/runtime/win/Manticore.Win81/Manticore.Win81.csproj
@@ -114,6 +114,9 @@
     <Compile Include="..\Manticore.Desktop\ManticoreException.cs">
       <Link>ManticoreException.cs</Link>
     </Compile>
+    <Compile Include="..\Manticore.Desktop\ScriptEventArgs.cs">
+      <Link>ScriptEventArgs.cs</Link>
+    </Compile>
     <Compile Include="ManticoreEngine.cs" />
     <Compile Include="DefaultConverter.cs" />
     <Compile Include="IJsTypeConverter.cs" />
