--- a/appveyor.yml
+++ b/appveyor.yml
@@ -13,6 +13,7 @@ environment:
   AppxPackageSigningEnabled: false
 
 install:
+  - echo install step
   - ps: Install-Product node $env:nodejs_version
   - git submodule update --init --recursive
   - npm install -g npm@3
@@ -22,8 +23,29 @@ install:
   - npm run win-testjs
 
 before_build:
+  - echo before_build step
   - ps: nuget restore runtime\win\Manticore.sln
 
 build:
   project: runtime/win/Manticore.sln
   verbosity: minimal
+
+before_test:
+  - echo before_test step
+  - dir C:\projects\manticore-native\runtime\win\Manticore.Desktop.Test\bin\Debug
+  - dir C:\projects\manticore-native\runtime\win\Manticore.Net4.Test\bin\Debug
+  - dir C:\projects\manticore-native\runtime\win\Manticore.Win81.Test\obj\x86\Debug
+
+test: off
+
+test_script:
+  - '%xunit20%\xunit.console.x86 "C:\projects\manticore-native\runtime\win\Manticore.Desktop.Test\bin\Debug\Manticore.Desktop.Test.dll" -appveyor'
+  - '%xunit20%\xunit.console.x86 "C:\projects\manticore-native\runtime\win\Manticore.Net4.Test\bin\Debug\Manticore.Net4.Test.dll" -appveyor'
+
+notifications:
+  - provider: Webhook
+    url: https://webhooks.gitter.im/e/ca378df62dd2e3372f46
+    method: GET
+    on_build_success: true
+    on_build_failure: false
+    on_build_status_changed: false
