--- a/.travis.yml
+++ b/.travis.yml
@@ -6,11 +6,11 @@ matrix:
       node_js: "4.4"
     - os: osx
       language: objective-c
-      env: BUILD_ITEM=mac
+      env: BUILD_ITEM=objc
       osx_image: xcode7.3
       node_js: "4.4"
     - language: android
-      env: BUILD_ITEM=android
+      env: BUILD_ITEM=java
       node_js: "4.4"
       android:
         components:
