--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "win-polyfill": "babel-node ./bin/mantify runtime/win/generated/polyfill.clearscript.pack.js runtime/win/js/polyfill.clearscript.js && babel-node ./bin/mantify runtime/win/generated/polyfill.jint.pack.js runtime/win/js/polyfill.jint.js",
     "win-testjs": "mkdirp runtime/win/generated/jint runtime/win/generated/ClearScript && babel-node -- ./bin/manticore-gen -q ./runtime/win/templates/jint runtime/win/generated/jint test/js-source/*.js && babel-node -- ./bin/manticore-gen -q ./runtime/win/templates/clearscript runtime/win/generated/ClearScript test/js-source/*.js",
     "build": "babel index.js --out-dir build && babel lib --out-dir build",
-    "dev": "git submodule update --init --recursive && npm run build-testjs && npm run objc-polyfill && npm run android-polyfill && npm run win-polyfill && npm run objc-testjs && npm run android-testjs && npm run win-testjs"
+    "dev": "npm run build-testjs && npm run objc-polyfill && npm run android-polyfill && npm run win-polyfill && npm run objc-testjs && npm run android-testjs && npm run win-testjs"
   },
   "repository": {
     "type": "git",
@@ -37,31 +37,32 @@
   "dependencies": {
     "acorn-es7-plugin": "^1.0.12",
     "ansidiff": "^1.0.0",
+    "babel-cli": "^6.6.5",
+    "babel-loader": "^6.0.0",
+    "babel-plugin-syntax-async-functions": "^6.5.0",
+    "babel-plugin-transform-regenerator": "^6.6.5",
     "babel-polyfill": "^6.7.4",
+    "babel-preset-es2015": "^6.6.0",
     "babel-regenerator-runtime": "^6.5.0",
+    "babelify": "^7.2.0",
     "bluebird": "^3.3.4",
+    "browserify": "^13.0.0",
     "docchi": "^0.12.0",
     "dustjs-helpers": "^1.7.3",
     "dustjs-linkedin": "^2.7.2",
     "fs-extra": "^0.26.7",
     "glob": "^7.0.3",
     "lodash": "^4.6.1",
+    "mkdirp": "^0.5.1",
     "node-fetch": "^1.4.1",
+    "uglifyify": "^3.0.1",
     "yaku": "^0.14.1"
   },
   "devDependencies": {
-    "babel-cli": "^6.6.5",
     "babel-eslint": "^6.0.0",
-    "babel-plugin-syntax-async-functions": "^6.5.0",
-    "babel-plugin-transform-regenerator": "^6.6.5",
-    "babel-preset-es2015": "^6.6.0",
-    "babelify": "^7.2.0",
-    "browserify": "^13.0.0",
     "eslint": "^2.5.1",
     "eslint-config-airbnb": "^6.2.0",
     "eslint-plugin-react": "^4.2.3",
-    "mkdirp": "^0.5.1",
-    "tape": "^4.5.1",
-    "uglifyify": "^3.0.1"
+    "tape": "^4.5.1"
   }
 }
